[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true

[profile.dev]
split-debuginfo = "unpacked"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6"
env_logger = "0.9"
log = "0.4"
tonic-web = "0.2"
lazy_static = "1"
chrono = "0.4"
jwt = "0.16"
scrypt = "0.10.0"
sha2 = "0.10"
hmac = "0.12"
mongodb = "2"
prost = "0.9"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[build-dependencies]
tonic-build = "0.6"
